--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,34 @@
-doctype 5
-html
+!!! 5
+html(lang='en')
   head
     title= title
+    meta(charset='utf-8')
+    script(src='http://code.jquery.com/jquery.js')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(href="/stylesheets/spacelab.css", rel="stylesheet")
+    script(src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/js/bootstrap.min.js")
+    script(src='/javascripts/login.js')
+    style
+      body {
+        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+      }
+
   body
-    block content
+    .navbar.navbar-inverse.navbar-fixed-top
+      .navbar-inner
+        .container
+          button.btn.btn-navbar(type='button', data-toggle='collapse', data-target='.nav-collapse')
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          a.brand(href='#') Songs with Friends
+          .nav-collapse.collapse
+            ul.nav
+              li.active
+                a(href='#') Home
+              li
+                a(href='#rules') Rules
+              li
+                a(href='#contact') Contact
+    .container(id='page')
+      block content 
