--- a/views/gameview.jade
+++ b/views/gameview.jade
@@ -1,4 +1,59 @@
 extends layout
 
 block content
-    h1 gameview
+    div.container-fluid
+      div.row-fluid
+        span.span4
+        span.span3
+          div
+            h1.dom-heading ThemeCard
+        span.span4
+      div.row-fluid
+        span.span2
+          div.div-1
+            h4.dom-heading Song1
+            h4.dom-heading
+              | Artist1
+              div
+                br
+            button.btn.btn-1 Button
+        span.span2
+          div.div-1
+            h4.dom-heading Song2
+            h4.dom-heading
+              | Artist2
+              div
+                br
+            button.btn Button
+        span.span2
+          div.div-1
+            h4.dom-heading Song3
+            h4.dom-heading
+              | Artist3
+              div
+                br
+            button.btn Button
+        span.span2
+          div.div-1
+            h4.dom-heading Song4
+            h4.dom-heading
+              | Artist4
+              div
+                br
+            button.btn Button
+        span.span2
+          div.div-1
+            h4.dom-heading Song5
+            h4.dom-heading
+              | Artist5
+              div
+                br
+            button.btn Button
+        span.span2
+          div.div-1
+            h4.dom-heading Song6
+            h4.dom-heading
+              | Artist6
+              div
+                br
+            button.btn Button
