commented out gets and posts

--- a/views/gameview.jade
+++ b/views/gameview.jade
@@ -17,6 +17,6 @@ block content
                 | #{song.artist}
                 div
                   br
-              button.btn.btn-1.btn-2 Play
+              button.btn.btn-1.btn-2.playbutton Play
               button.btn.btn-2.btn-3 Submit
           
