--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
     
-  script(src='/javascripts/apitest.js')  
+  //- script(src='/javascripts/apitest.js')  
   #api
     img#art(src='', height='200', width='200', style='float: left; margin-right: 20px;')
     div
