--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,7 +8,9 @@ html(lang='en')
     link(href="/stylesheets/spacelab.css", rel="stylesheet")
     script(src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/js/bootstrap.min.js")
     script(src='/javascripts/login.js')
-    script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js')
+    script(src='/javascripts/rdio.js')
+    
+
     style
       body {
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
