--- a/views/layout.jade
+++ b/views/layout.jade
@@ -24,7 +24,7 @@ html(lang='en')
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.brand(href='#') Songs with Friends
+          a.brand(href='#') One Flew Over The Echo Nest
           .nav-collapse.collapse
             ul.nav
               li.active
