Added enter and button

--- a/views/gameview.jade
+++ b/views/gameview.jade
@@ -20,6 +20,7 @@ block content
                 | #{song.artist}
                 div
                   br
-              button.btn.btn-1.btn-2.playbutton(id=song.track) Play
-              button.btn.btn-2.btn-3.submitbutton(id=song.title) Submit
+              div 
+                button.btn.btn-1.btn-2.playbutton(id=song.track, style="width:80px") Play
+                button.btn.btn-2.btn-3.submitbutton(id=song.title, style="width:80px") Submit
           
