Working on changing a hand

--- a/views/gameview.jade
+++ b/views/gameview.jade
@@ -4,7 +4,7 @@ block content
     script(src='/javascripts/gameview.js')
     
   
-    .container-fluid
+    .container-fluid(id="gameview")
       .row-fluid
         span.span4
         span.span3
