--- a/views/login.jade
+++ b/views/login.jade
@@ -15,5 +15,5 @@ block content
         
         div.control-group
           div.controls
-            a.btn.btn-info(id='login') Login
+            a.btn.btn-info(id='login', havefun="shane") Login
     div(id="song")
