--- a/views/gameview.jade
+++ b/views/gameview.jade
@@ -1,26 +1,6 @@
 extends layout
 
 block content
-    script(src='/javascripts/gameview.js')
-    
+       
   
-    .container-fluid(id="gameview")
-      .row-fluid
-        span.span4
-        span.span3
-          div
-            h1.dom-heading1 #{theme}
-        span.span4
-      .row-fluid
-        each song, i in songs 
-          span.span2
-            .div-1
-              h4.dom-heading #{song.title}
-              h4.dom-heading
-                | #{song.artist}
-                div
-                  br
-              div 
-                button.btn.btn-1.btn-2.playbutton(id=song.track, style="width:80px") Play
-                button.btn.btn-2.btn-3.submitbutton(id=song.title, style="width:80px") Submit
-          
+    include gameviewpartial
