--- a/views/layout.jade
+++ b/views/layout.jade
@@ -33,5 +33,7 @@ html(lang='en')
                 a(href='#rules') Rules
               li
                 a(href='#contact') Contact
+              li
+                a.Timer 
     .container(id='page')
       block content 
