--- a/views/login.jade
+++ b/views/login.jade
@@ -1,9 +1,11 @@
 extends layout
 
 block content
-    
+    div(id="absolute-wrapper")
+      img(src="http://3.bp.blogspot.com/_yvHgvTKuzxM/TIgJ3qsKHwI/AAAAAAAAACo/JEbqu25zh3k/s1600/ws_House_Party_1152.jpg", class="image")
+
     div.span4(id="loginjade")
-      form.form-horizontal
+      form.form-horizontal(Style="position: absolute;top: 100px;left: 980px;")
         div.group-control
           label.control-label(for='inputUsername') Username
           div.controls
