--- a/views/gameviewpartial.jade
+++ b/views/gameviewpartial.jade
@@ -16,6 +16,6 @@ script(src='/javascripts/gameview.js')
             div
               br
           div
-            button.btn.btn-1.btn-2.playbutton(id=song.track, style="width:80px;margin-left: 27px;margin-right: 27px;") Play
+            button.btn.btn-1.btn-2.playbutton(id=song.track, value="play", style="width:80px;margin-left: 27px;margin-right: 27px;")
             button.btn.btn-2.btn-3.submitbutton(id=song.title, style="width:80px; margin-left: 27px;margin-right: 27px;position: relative;bottom: 0px;") Submit
       
