--- a/views/login.jade
+++ b/views/login.jade
@@ -5,13 +5,13 @@ block content
       img(src="http://3.bp.blogspot.com/_yvHgvTKuzxM/TIgJ3qsKHwI/AAAAAAAAACo/JEbqu25zh3k/s1600/ws_House_Party_1152.jpg", class="image")
 
     div.span4(id="loginjade")
-      form.form-horizontal(Style="position: absolute;top: 100px;left: 980px;")
+      form.form-horizontal(Style="position: absolute;top: 231px;left: 980px;")
         div.group-control
-          label.control-label(for='inputUsername') Username
+          label.control-label(for='inputUsername', Style='color:white') Username
           div.controls
             input.input-small(type="text",id="inputUsername", placeholder="username")
         div.control-group
-          label.control-label(for='inputPassword') Password
+          label.control-label(for='inputPassword', Style='color:white') Password
           div.controls
             input.input-small(type="password", id='inputPassword', placeholder="password")
         
