--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,7 +9,7 @@
   height: 1px;
 }
 #absolute-wrapper .image {
-  opacity: 0.3px;
+  opacity: 0.6;
   width: 1152px;
   height: 825px;
   position: absolute;
