fixed the jumpy dealer

--- a/views/gameviewdealerpartial.jade
+++ b/views/gameviewdealerpartial.jade
@@ -1,5 +1,9 @@
-script(src='/javascripts/gameviewdealer.js')
-script(src='/javascripts/gameview.js')
+//- script(src='/javascripts/gameview.js')
+script 
+  $(".selectbutton").click(function(){
+    console.log(this.id);
+    $.post("/dealersubmit", {title: this.id});
+  })
 .container-fluid(id="gameview")
   .row-fluid
     span.span4
@@ -17,6 +21,6 @@ script(src='/javascripts/gameview.js')
             div
               br
           div
-            button.btn.btn-1.btn-2.playbutton(id=song.track, value="Play", style="width:80px;margin-left: 27px;margin-right: 27px;") 
+            button.btn.btn-1.btn-2.playbutton(id=song.track, style="width:80px;margin-left: 27px;margin-right: 27px;") Play
             button.btn.btn-2.btn-3.selectbutton(id=song.title, style="width:80px; margin-left: 27px;margin-right: 27px;position: relative;bottom: 0px;") Select
       
