--- a/views/gameviewpartial.jade
+++ b/views/gameviewpartial.jade
@@ -1,4 +1,6 @@
 script(src='/javascripts/gameview.js')
+//- script
+//-   var endtime = #{endtime};
 .container-fluid(id="gameview")
   .row-fluid
     span.span4
