--- a/views/gameviewdealerpartial.jade
+++ b/views/gameviewdealerpartial.jade
@@ -1,9 +1,9 @@
 //- script(src='/javascripts/gameview.js')
-script 
-  $(".selectbutton").click(function(){
-    console.log(this.id);
-    $.post("/dealersubmit", {title: this.id});
-  })
+//- script 
+//-   $(".selectbutton").click(function(){
+//-     console.log(this.id);
+//-     $.post("/dealersubmit", {title: this.id});  
+//-   })
 .container-fluid(id="gameview")
   .row-fluid
     span.span4
