--- a/views/gameviewdealerpartial.jade
+++ b/views/gameviewdealerpartial.jade
@@ -1,6 +1,6 @@
 //- script(src='/javascripts/gameview.js')
 script 
-  console.log("Hi")
+  console.log("aHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH")
   $(".selectbutton").click(function(){
     console.log(this.id);
     $.post("/dealersubmit", {title: this.id});  
